# tiralabra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: implementationdocument.md  projectspecification.md  testingdocument.md  userguide.md
documentation/weekly reports/: week1report.md  week2report.md  week3report.md  week4report.md  week5report.md  week6report.md
dokumentaatio/: projectspecification.md
src/: coverage.xml  huffman.py  lz77.py  main.py  perftest.py  ui.py
src/files/: 5.txt  compressed.txt  compressedhuff.txt  dat.txt  encoded.txt  input.txt  rj.txt
src/inputs/: 10.txt  100.txt  50.txt  nonsense.txt
src/outputs/: compressedhuff.txt  compressedlz.txt  decompressedlz.txt
src/tests/: test_huffman.py  test_lz77.py
